# mcp-fedlex

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.de.md  README.fr.md  README.it.md  README.md  SECURITY.md  docker-compose.yml  inspector.json  likec4.config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  live-conformance.yml
crates/fedlex-akn/: Cargo.toml
crates/fedlex-akn/src/: chunking.rs  components.rs  doc.rs  dom.rs  error.rs  lib.rs  markdown.rs  modifications.rs  references.rs  special.rs  structure.rs  text.rs
crates/fedlex-akn/tests/: lexicon_conformance.rs
crates/fedlex-bridge/: Cargo.toml
crates/fedlex-bridge/src/: error.rs  fetcher.rs  lib.rs  sparql_http.rs  xml_source.rs
crates/fedlex-bridge/tests/: bridge_conformance.rs
crates/fedlex-core/: Cargo.toml
crates/fedlex-core/src/: eid.rs  eli.rs  lib.rs  provenance.rs  response.rs  sensitive.rs  temporal.rs
crates/fedlex-jolux/: Cargo.toml
crates/fedlex-jolux/src/: citations.rs  client.rs  error.rs  genesis.rs  impacts.rs  lib.rs  metadata.rs  publication.rs  resolve.rs  search.rs  subdivisions.rs  taxonomy.rs  temporal.rs  treaties.rs  vocabulary.rs
crates/fedlex-jolux/tests/: lexicon_conformance.rs
crates/fedlex-store/: Cargo.toml
crates/fedlex-store/src/: key.rs  lib.rs  oxigraph_corpus.rs  redis_store.rs  redis_tls.rs  repository.rs  scratchpad.rs  token_bucket.rs
crates/fedlex-store/tests/: redis_isolation.rs  token_bucket_integration.rs
crates/fedlex-telemetry/: Cargo.toml
crates/fedlex-telemetry/src/: lib.rs  scrubber.rs
crates/mcp-ingest/: Cargo.toml
crates/mcp-ingest/src/: consumer.rs  dlq.rs  lib.rs  main.rs  outbox.rs  oxigraph_sink.rs  writer.rs
crates/mcp-reader/: Cargo.toml
crates/mcp-reader/src/: app.rs  auth.rs  circuit_breaker.rs  discovery.rs  health.rs  lib.rs  lod_gateway.rs  main.rs  metadata.rs  probes.rs  protocol.rs  quota.rs  registry.rs  sandbox.rs  semantic_client.rs  temporal.rs  tool.rs  tools.rs  transport.rs  warmup.rs  xml_engine.rs
crates/mcp-reader/tests/: lexicon_projection.rs  protocol_baseline.rs  quota_integration.rs
docs/: 10_LEXICON_jolux.md  11_LEXICON_akn.md  30_PLAN.md  40_FINDINGS.md  45_GAP_ANALYSIS.md  50_ROADMAP_TO_PERFECT.md  55_MIGRATION_mcp_protocol_upgrade.md  60_OPEN_ITEMS_AND_USABILITY.md  70_CONFIG.md  80_DEPLOY.md  90_AUTH_AND_ROLES.md  IMPLEMENTATION_BRIEFING_lexicon_projection_matrix.md
docs/adr/: ADR-001-pii-scrubbing-and-tenant-isolation.md  ADR-002-distributed-quota.md  ADR-003-index-consistency.md  ADR-004-response-provenance.md  ADR-005-service-to-service-auth.md  ADR-006-discovery-tools-and-hint-provenance.md  ADR-007-jolux-metadata-tools-pool-and-quota.md  ADR-008-mcp-protocol-version-upgrade.md  README.md
likec4/: PLAN_BUNDLE.md  bundle.py  bundle.sh  model.c4  specification.c4  start.py  stop.py  views.c4
scripts/: smoke.sh
