[workspace]
resolver = "2"
members = [
    "crates/fedlex-core",
    "crates/fedlex-store",
    "crates/fedlex-jolux",
    "crates/fedlex-akn",
    "crates/fedlex-bridge",
    "crates/fedlex-telemetry",
    "crates/mcp-reader",
]

[workspace.package]
version = "0.2.0"

edition = "2024"

license = "Apache-2.0"

authors = ["mindful.bio"]
repository = "https://github.com/mindful-bio/mcp-fedlex"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = true
codegen-units = 1
