[package]
name = "fedlex-akn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fedlex-core = { path = "../fedlex-core" }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "charset", "json"] }
serde_json = "1"
