[package]
name = "fedlex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
