[package]
name = "fedlex-jolux"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fedlex-core = { path = "../fedlex-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset"] }
