[package]
name = "mcp-reader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "mcp-reader"
path = "src/main.rs"

[lib]
name = "mcp_reader"
path = "src/lib.rs"

[dependencies]
fedlex-core = { path = "../fedlex-core" }
fedlex-store = { path = "../fedlex-store", features = ["redis-store", "redis-tls"] }
fedlex-telemetry = { path = "../fedlex-telemetry" }
fedlex-jolux = { path = "../fedlex-jolux" }
fedlex-akn = { path = "../fedlex-akn" }
fedlex-bridge = { path = "../fedlex-bridge" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset"] }
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
moka = { version = "0.12", features = ["future"] }
regex = "1"
axum = "0.7"
futures = "0.3"
[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
tower = { version = "0.5", features = ["util"] }
